# R-Type

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  INSTALL.md  README.md  build.bat  build.sh  comparative_study.md  conanfile.txt  flake.nix  index.html  modules.md  vcpkg.json  xmake.lua
.github/workflows/: mirror.yaml
assets/: game.yml
assets/objects/: background_level1.yml  test.yml
assets/scenes/: main_scene.yml  menu_scene.yml
assets/scripts/: test.lua
client/: ArgumentParser.cpp  getType.cpp  main(graph).cpp  main.cpp  main_base.cpp  main_offline.cpp
client/src/: client.cpp  client_base.cpp  client_copy.cpp
common/: getLibs.cpp  main.cpp
doxydoc/html/: AcknowledgmentMessage_8cpp.html  AcknowledgmentMessage_8cpp__incl.map  AcknowledgmentMessage_8cpp__incl.md5  AcknowledgmentMessage_8hpp.html  AcknowledgmentMessage_8hpp__dep__incl.map  AcknowledgmentMessage_8hpp__dep__incl.md5  AcknowledgmentMessage_8hpp__incl.map  AcknowledgmentMessage_8hpp__incl.md5  AcknowledgmentMessage_8hpp_source.html  ArgumentParser_8cpp.html  ArgumentParser_8cpp__incl.map  ArgumentParser_8cpp__incl.md5  BinaryDeserializer_8cpp.html  BinaryDeserializer_8cpp__incl.map  BinaryDeserializer_8cpp__incl.md5  BinaryDeserializer_8hpp.html  BinaryDeserializer_8hpp__dep__incl.map  BinaryDeserializer_8hpp__dep__incl.md5  BinaryDeserializer_8hpp__incl.map  BinaryDeserializer_8hpp__incl.md5  BinaryDeserializer_8hpp_source.html  BinarySerializer_8cpp.html  BinarySerializer_8cpp__incl.map  BinarySerializer_8cpp__incl.md5  BinarySerializer_8hpp.html  BinarySerializer_8hpp__dep__incl.map  BinarySerializer_8hpp__dep__incl.md5  BinarySerializer_8hpp__incl.map  BinarySerializer_8hpp__incl.md5  BinarySerializer_8hpp_source.html  ClientHelloMessage_8cpp.html  ClientHelloMessage_8cpp__incl.map  ClientHelloMessage_8cpp__incl.md5  ClientHelloMessage_8hpp.html  ClientHelloMessage_8hpp__dep__incl.map  ClientHelloMessage_8hpp__dep__incl.md5  ClientHelloMessage_8hpp__incl.map  ClientHelloMessage_8hpp__incl.md5  ClientHelloMessage_8hpp_source.html  ConsoleLogger_8cpp.html  (+1183 more)
doxydoc/latex/: AcknowledgmentMessage_8cpp.tex  AcknowledgmentMessage_8cpp__incl.md5  AcknowledgmentMessage_8hpp.tex  AcknowledgmentMessage_8hpp__dep__incl.md5  AcknowledgmentMessage_8hpp__incl.md5  AcknowledgmentMessage_8hpp_source.tex  ArgumentParser_8cpp.tex  ArgumentParser_8cpp__incl.md5  BinaryDeserializer_8cpp.tex  BinaryDeserializer_8cpp__incl.md5  BinaryDeserializer_8hpp.tex  BinaryDeserializer_8hpp__dep__incl.md5  BinaryDeserializer_8hpp__incl.md5  BinaryDeserializer_8hpp_source.tex  BinarySerializer_8cpp.tex  BinarySerializer_8cpp__incl.md5  BinarySerializer_8hpp.tex  BinarySerializer_8hpp__dep__incl.md5  BinarySerializer_8hpp__incl.md5  BinarySerializer_8hpp_source.tex  ClientHelloMessage_8cpp.tex  ClientHelloMessage_8cpp__incl.md5  ClientHelloMessage_8hpp.tex  ClientHelloMessage_8hpp__dep__incl.md5  ClientHelloMessage_8hpp__incl.md5  ClientHelloMessage_8hpp_source.tex  ConsoleLogger_8cpp.tex  ConsoleLogger_8cpp__incl.md5  ConsoleLogger_8hpp.tex  ConsoleLogger_8hpp__dep__incl.md5  ConsoleLogger_8hpp__incl.md5  ConsoleLogger_8hpp_source.tex  Endianness_8hpp.tex  Endianness_8hpp__dep__incl.md5  Endianness_8hpp__incl.md5  Endianness_8hpp_source.tex  GameStateUpdateMessage_8cpp.tex  GameStateUpdateMessage_8cpp__incl.md5  GameStateUpdateMessage_8hpp.tex  GameStateUpdateMessage_8hpp__dep__incl.md5  (+634 more)
engine/core/: entity.cpp  game.cpp  object.cpp  registry.cpp  scene.cpp
engine/graphic/: displayManager.cpp
engine/raylib/: displayManager.cpp
engine/scripting/: ScriptEnvironment.cpp  ScriptGlobalDefinition.cpp  ScriptOrchestrator.cpp  game.cpp
include/: Timer.hpp  client.hpp  common.hpp  engineAlgorithm.hpp  engineComponents.hpp  engineCore.hpp  engineCore.tpp  engineExceptions.hpp  engineGraphic.hpp  engineGraphicRay.hpp  engineMath.hpp  engineScripting.hpp  gameArguments.hpp  gameClient.hpp  gameServer.hpp  libs.hpp
jetpack_joyride/: game.yml
jetpack_joyride/objects/: coin.yml
jetpack_joyride/scripts/: background.lua  main_player.lua
network/: CMakeLists.txt
network/include/: AsioNetwork.hpp  INetwork.hpp
network/src/: AsioNetwork.cpp
r-type/: game.yml
r-type-offline/: game.yml
r-type-offline/hud/: score.yml
r-type-offline/objects/: background.yml
r-type-offline/scripts/: bullet.lua  collision_handler.lua  ennemy.lua  ennemy_bullet.lua  score.lua
r-type/objects/: background_level1.yml  ennemy_spawner.yml  test.yml  world_collider.yml
r-type/scenes/: level1.yml  main_scene.yml  menu_scene.yml  scene_test.yml
r-type/scripts/: background.lua  bullet.lua  buttons.lua  collision_handler.lua  ennemy.lua  ennemy_bullet.lua  ennemy_manager.lua  ennemy_pata-pata_movement.lua  player.lua  player_movements.lua  player_shoot.lua  score.lua  test.lua  test1.lua
secondary-game/: game.yml
secondary-game/objects/: background.yml  player.yml
secondary-game/scenes/: main_game.yml
secondary-game/scripts/: coin_script.lua  main_player.lua
server/: getType.cpp  main.cpp  readme.md
server/include/: AcknowledgmentMessage.hpp  AsioNetwork.hpp  BinaryDeserializer.hpp  BinarySerializer.hpp  ClientHelloMessage.hpp  ConsoleLogger.hpp  Endianness.hpp  GameStateUpdateMessage.hpp  IConfiguration.hpp  IDeserializer.hpp  IGameLogic.hpp  ILogger.hpp  IMessage.hpp  INetwork.hpp  ISerializer.hpp  ITaskScheduler.hpp  MessageBase.hpp  MessageDispatcher.hpp  MessageFactory.hpp  MessageTypes.hpp  PlayerInputMessage.hpp  RTypeGameLogic.hpp  RTypeServer.hpp  Server.hpp  ServerNetwork.hpp  ServerWelcomeMessage.hpp  ThreadPoolScheduler.hpp  protocol.hpp  tcp_server.hpp  udp_server.hpp
server/includes/: Player.hpp
server/src/: AcknowledgmentMessage.cpp  ArgumentParser.cpp  AsioNetwork.cpp  BinaryDeserializer.cpp  BinarySerializer.cpp  ClientHelloMessage.cpp  ConsoleLogger.cpp  GameStateUpdateMessage.cpp  MessageBase.cpp  MessageDispatcher.cpp  MessageFactory.cpp  Player.cpp  PlayerInputMessage.cpp  RTypeGameLogic.cpp  RTypeServer.cpp  Server.cpp  ServerNetwork.cpp  ServerWelcomeMessage.cpp  UdpGameServer.cpp  (+7 more)
(+211 files in other folders)
